--- a/2018 FIFA World Cup.html
+++ b/2018 FIFA World Cup.html
@@ -1,5 +1,5 @@
 <html>
-<head><title>2018 FIFA World Cup</title></head>
+<head><title>2018 fifa world cup</title></head>
 <body bgcolor="#99c2ff">
 <u><b><i>
 <h1 align="center">2018 FIFA WORLD CUP</h1>
